--- a/src/app/Componentes/side-bar/side-bar.component.html
+++ b/src/app/Componentes/side-bar/side-bar.component.html
@@ -1,105 +1,139 @@
-<div class="area"></div>
 <nav class="main-menu">
-    
-    <ul>
-        <li class="has-subnav navnombre">
-            <div class="d-flex align-items-center p-1">
+    <ul class="nav-prin">
+        <li class="has-subnav nav-nombre-salir">
+            <div class="d-flex align-items-center ps-1 pt-2 pb-2">
                 <div class="flex-shrink-0">
-                    <img src="/assets/student2.png" alt="jesus" class="img-fluid img-thumbnail rounded-circle logoEst">
+                    <img src="/assets/student2.png" alt="perfil" class="img-fluid img-thumbnail rounded-circle logoEst">
                 </div>
                 <div class="flex-grow-1 ms-3 nombre">
                     <span>
-                        Hola Shande HIJODEPRRRA
+                        Hola Shande HIJO DEPERRAAAA
                     </span>
                 </div>
-              </div>
+            </div>
+        </li>
+        <li class="mt-2">
+            <a routerLink="/login" routerLinkActive="active">
+                <div class="pt-2 pb-2">
+                    <i class="fa-solid fa-home fa-2xl"></i>
+                    <span class="nav-text ps-2">
+                        Dashboard
+                    </span>
+                </div>
+            </a>
         </li>
         <li>
-            <a href="#">
-                <i class="fa fa-home fa-2x"></i>
-                <span class="nav-text">
-                    Dashboard
-                </span>
-            </a>
-          
-        </li>
-        <li class="has-subnav">
-            <a href="#">
-                <i class="fa fa-laptop fa-2x"></i>
-                <span class="nav-text">
-                    Stars Components
-                </span>
-            </a>
-            
-        </li>
-        <li class="has-subnav">
-            <a href="#">
-               <i class="fa fa-list fa-2x"></i>
-                <span class="nav-text">
-                    Forms
-                </span>
-            </a>
-            
-        </li>
-        <li class="has-subnav">
-            <a href="#">
-               <i class="fa fa-folder-open fa-2x"></i>
-                <span class="nav-text">
-                    Pages
-                </span>
-            </a>
-           
-        </li>
-        <li>
-            <a href="#">
-                <i class="fa fa-bar-chart-o fa-2x"></i>
-                <span class="nav-text">
-                    Graphs and Statistics
-                </span>
+            <a routerLink="/perfil" routerLinkActive="active">
+                <div class="pt-2 pb-2">
+                    <i class="fa-solid fa-laptop fa-2x"></i>
+                    <span class="nav-text ps-2">
+                        Perfil
+                    </span>
+                </div>
             </a>
         </li>
         <li>
             <a href="#">
-                <i class="fa fa-font fa-2x"></i>
-                <span class="nav-text">
-                   Quotes
-                </span>
-            </a>
-        </li>
-        <li>
-           <a href="#">
-               <i class="fa fa-table fa-2x"></i>
-                <span class="nav-text">
-                    Tables
-                </span>
-            </a>
-        </li>
-        <li>
-           <a href="#">
-                <i class="fa fa-map-marker fa-2x"></i>
-                <span class="nav-text">
-                    Maps
-                </span>
+                <div class="pt-2 pb-2">
+                    <i class="fa-solid fa-list fa-2x"></i>
+                    <span class="nav-text ps-2">
+                        Cursos
+                    </span>
+                </div>
             </a>
         </li>
         <li>
             <a href="#">
-               <i class="fa fa-info fa-2x"></i>
-                <span class="nav-text">
-                    Documentation
-                </span>
+                <div class="pt-2 pb-2">
+                    <i class="fa-solid fa-folder-open fa-2x"></i>
+                    <span class="nav-text ps-2">
+                        Cursos
+                    </span>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <div class="pt-2 pb-2">
+                    <i class="fa-solid fa-bar-chart-o fa-2x"></i>
+                    <span class="nav-text ps-2">
+                        Estadisticas
+                    </span>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <div class="pt-2 pb-2">
+                    <i class="fa-solid fa-font fa-2x"></i>
+                    <span class="nav-text ps-2">
+                        Quotes
+                    </span>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <div class="pt-2 pb-2">
+                    <i class="fa-solid fa-table fa-2x"></i>
+                    <span class="nav-text ps-2">
+                        Tables
+                    </span>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <div class="pt-2 pb-2">
+                    <i class="fa-solid fa-map-marker fa-2x"></i>
+                    <span class="nav-text ps-2">
+                        Maps
+                    </span>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <div class="pt-2 pb-2">
+                    <i class="fa-solid fa-info fa-2x"></i>
+                    <span class="nav-text ps-2">
+                        Noticias
+                    </span>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <div class="pt-2 pb-2">
+                    <i class="fa-solid fa-info fa-2x"></i>
+                    <span class="nav-text ps-2">
+                        Noticias
+                    </span>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <div class="pt-2 pb-2">
+                    <i class="fa-solid fa-info fa-2x"></i>
+                    <span class="nav-text ps-2">
+                        Noticias
+                    </span>
+                </div>
+            </a>
+        </li>
+
+    </ul>
+    <ul class="logout nav-nombre-salir mt-5">
+        <li>
+            <a routerLink="/login">
+                <div class="pt-2 pb-2">
+                    <i class="fa-solid fa-power-off fa-2x"></i>
+                    <span class="nav-text ps-2">
+                        Salir
+                    </span>
+                </div>
             </a>
         </li>
     </ul>
-  
-    <ul class="logout navnombre">
-        <li>
-           <a href="#">
-                 <i class="fa fa-power-off fa-2x"></i>
-                <span class="nav-text">
-                    Logout
-                </span>
-            </a>
-        </li>  
-    </ul>
-  </nav>
+</nav>
